Fix for long links overflowing their container on announcements/comments

--- a/web/static/css/_announcement.scss
+++ b/web/static/css/_announcement.scss
@@ -131,6 +131,8 @@
   }
 
   p {
+    overflow-wrap: break-word;
+      
     &:last-child {
       margin-bottom: 0;
     }
